--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -93,7 +93,7 @@ registry:
         is_enabled: :false
       - key: :extended_aptc_individual_agreement_message
         item: :extended_aptc_individual_agreement_message
-        is_enabled: false
+        is_enabled: <%= ENV['EXTENDED_APTC_INDIVIDUAL_AGREEMENT_MESSAGE_IS_ENABLED'] || false %>
       - key: :application_type_options
         item: ["Phone", "Paper", "Curam", "Mobile"]
         is_enabled: true
