--- a/config/client_config/dc/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/dc/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -113,6 +113,8 @@ registry:
         is_enabled: <%= ENV['QHP_PRODUCT_FOR_INCLUDE_ACA_INDIVIDUAL_IS_ENABLED'] || false %>
       - key: :display_you_pay
         is_enabled: <%= ENV['DISPLAY_YOU_PAY_IS_ENABLED'] || false %>
+      - key: :address_compare
+        is_enabled: <%= ENV['ADDRESS_COMPARE_IS_ENABLED'] || false %>
   - namespace:
     - :enroll_app
     - :aca_individual_market
