--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -113,8 +113,6 @@ registry:
         is_enabled: <%= ENV['QHP_PRODUCT_FOR_INCLUDE_ACA_INDIVIDUAL_IS_ENABLED'] || false %>
       - key: :display_you_pay
         is_enabled: <%= ENV['DISPLAY_YOU_PAY_IS_ENABLED'] || false %>
-      - key: :address_compare
-        is_enabled: <%= ENV['ADDRESS_COMPARE_IS_ENABLED'] || false %>
   - namespace:
     - :enroll_app
     - :aca_individual_market
@@ -140,4 +138,11 @@ registry:
             item: 31
           - key: :year_offset
             item: 0
-
+  - namespace:
+      - :features
+      - :enroll_app
+      - :aca_individual_market
+      - :service_and_rating_area_change
+    features:
+      - key: :address_compare
+        is_enabled: <%= ENV['ADDRESS_COMPARE_IS_ENABLED'] || false %>
