--- a/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -44,6 +44,8 @@ registry:
         settings:
           - key: :default_applied_aptc_percentage
             item: 1
+          - key: :minimum_applied_aptc_percentage_for_osse
+            item: 0
       - key: :cancel_renewals_for_term
         item: Operations::Individual::CancelRenewalEnrollment.new
         is_enabled: true
