--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -40,7 +40,7 @@ registry:
       - key: :fifteenth_of_the_month_rule_overridden
         is_enabled: false
       - key: :aca_individual_osse_aptc_minimum
-        is_enabled: false
+        is_enabled: <%= ENV['ACA_INDIVIDUAL_OSSE_APTC_MINIMUM'] || false %>
       - key: :aca_individual_assistance_benefits
         is_enabled: true
         settings:
