--- a/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
@@ -291,7 +291,10 @@ registry:
     - key: :pregnancy_due_on_required
       is_enabled: false
     - key: :post_partum_period
-      is_enabled: <%= ENV['POST_PARTUM_PERIOD'] || "the last 60 days" %>
+      is_enabled: true
+      settings:
+        - key: :length_of_time
+          item: <%= ENV['POST_PARTUM_PERIOD_LENGTH_OF_TIME'] || "the last 60 days" %>
     - key: :voter_registration_through_ext_url
       is_enabled: true
     - key: :voter_registration_through_hbx
