--- a/system/config/templates/features/aca_individual_market/financial_assistance.yml
+++ b/system/config/templates/features/aca_individual_market/financial_assistance.yml
@@ -290,11 +290,8 @@ registry:
       is_enabled: true
     - key: :pregnancy_due_on_required
       is_enabled: true
-    - key: :post_partum_period
-      is_enabled: true
-      settings:
-        - key: :length_of_time
-          item: <%= ENV['POST_PARTUM_PERIOD_LENGTH_OF_TIME'] || "the last 60 days" %>
+    - key: :post_partum_period_one_year
+      is_enabled:  <%= ENV['POST_PARTUM_PERIOD_ONE_YEAR_IS_ENABLED'] || false %>
     - key: :voter_registration_through_ext_url
       is_enabled: false
     - key: :voter_registration_through_hbx
