--- a/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
@@ -291,7 +291,7 @@ registry:
     - key: :pregnancy_due_on_required
       is_enabled: false
     - key: :post_partum_period_one_year
-      is_enabled:  <%= ENV['POST_PARTUM_PERIOD_ONE_YEAR_IS_ENABLED'] || true %>
+      is_enabled:  <%= ENV['POST_PARTUM_PERIOD_ONE_YEAR_IS_ENABLED'] || false %>
     - key: :voter_registration_through_ext_url
       is_enabled: true
     - key: :voter_registration_through_hbx
