--- a/config/client_config/me/system/config/templates/features/enroll_app/fdsh_services.yml
+++ b/config/client_config/me/system/config/templates/features/enroll_app/fdsh_services.yml
@@ -13,7 +13,7 @@ registry:
         is_enabled: true
         settings:
         - key: :payload_type
-          item:  <%= ENV['SSA_H3_PAYLOAD_TYPE'] || "json" %>
+          item:  <%= ENV['SSA_H3_PAYLOAD_TYPE'] || "xml" %>
       - key: :renewal_eligibility_verification_using_rrv
         item: :renewal_eligibility_verification_using_rrv
         is_enabled: <%= ENV['RENEWAL_ELIGIBILITY_VERIFICATION_USING_RRV_IS_ENABLED'] || true %>
