resets full_medicaid_determination value for auto renewals (#2984)
* set full_medicaid_determination value to nil for auto renewal applications

* add RR setting annual_eligibility_redetermination for full_medicaid_determination feature

* add spec

* update env variable name

* code refactor

--- a/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/financial_assistance.yml
@@ -264,6 +264,9 @@ registry:
           item: true
     - key: :full_medicaid_determination_step
       is_enabled: false
+      settings:
+        - key: :annual_eligibility_redetermination
+          item: <%= ENV['FULL_MEDICAID_DETERMINATION_FOR_ANNUAL_ELIGIBILITY_REDETERMINATION_IS_ENABLED'] || false %>
     - key: :native_american_csr
       is_enabled: true
     - key: :display_medicaid_question
