--- a/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -107,7 +107,8 @@ registry:
         item: "State Medicaid Agency"
         is_enabled: true
       - key: :verification_reasons
-        item: ["Document in EnrollApp", "Electronic data source", "State Medicaid Agency"]
+        item: ["Document in EnrollApp", "Electronic data source", "State Medicaid Agency",
+               "Self-Attestation"]
         is_enabled: true
       - key: :total_minimum_responsibility
         is_enabled: true
