--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -105,7 +105,7 @@ registry:
         item: "Curam"
         is_enabled: true
       - key: :verification_reasons
-        item: ["Document in EnrollApp", "Document in DIMS", "SAVE system", "E-Verified in Curam", "Self-Attestation", "Salesforce"]
+        item: ["Document in EnrollApp", "Document in DIMS", "SAVE system", "E-Verified in Curam", "Salesforce", "Self-Attestation"]
         is_enabled: true
       - key: :total_minimum_responsibility
         is_enabled: false
