--- a/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -120,6 +120,8 @@ registry:
         is_enabled: <%= ENV['QHP_PRODUCT_FOR_INCLUDE_ACA_INDIVIDUAL_IS_ENABLED'] || false %>
       - key: :display_you_pay
         is_enabled: <%= ENV['DISPLAY_YOU_PAY_IS_ENABLED'] || false %>
+      - key: :validate_ssn
+        is_enabled: <%= ENV['VALIDATE_SSN_IS_ENABLED'] || false %>
   - namespace:
     - :enroll_app
     - :aca_individual_market
