--- a/config/client_config/dc/system/config/templates/features/aca_individual_market/individual_osse_eligibilities.yml
+++ b/config/client_config/dc/system/config/templates/features/aca_individual_market/individual_osse_eligibilities.yml
@@ -5,38 +5,98 @@ registry:
     - :aca_individual_market
     - :benefit_coverage_period
     features:
-      - key: :aca_individual_osse_eligibility
-        item: :aca_individual_osse_eligibility
+      - key: :aca_ivl_osse_eligibility
+        item: :aca_ivl_osse_eligibility
         is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_IS_ENABLED'] || false %>
   - namespace:
     - :enroll_app
     - :aca_individual_market
     - :benefit_coverage_period
-    - :aca_individual_osse_eligibility
+    - :aca_ivl_osse_eligibility
     features:
       - key: :self_service_osse_subsidy
         item: :self_service_osse_subsidy
         is_enabled: <%= ENV['SELF_SERVICE_OSSE_SUBSIDY_IS_ENABLED'] || false %>
+      - key: :aca_individual_osse_aptc_minimum
+        is_enabled: <%= ENV['ACA_INDIVIDUAL_OSSE_APTC_MINIMUM'] || false %>
+        settings:
+          - key: :minimum_applied_aptc_percentage_for_osse
+            item: 0.85
       - key: :individual_osse_plan_filter
         item: :individual_osse_plan_filter
         is_enabled: <%= ENV['ACA_INDIVIDUAL_OSSE_PLAN_FILTERING_IS_ENABLED'] || false %>
       - key: :aca_ivl_osse_effective_beginning_of_year
         item: :aca_ivl_osse_effective_beginning_of_year
         is_enabled: <%= ENV['ACA_IVL_OSSE_EFFECTIVE_BEGINNING_OF_YEAR_IS_ENABLED'] || false %>
-      - key: :aca_individual_osse_aptc_minimum
+      - key: :aca_ivl_osse_eligibility_2021
+        item: :aca_ivl_osse_eligibility_2021
+        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2021_IS_ENABLED'] || false %>
+      - key: :aca_ivl_osse_eligibility_2022
+        item: :aca_ivl_osse_eligibility_2022
+        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2022_IS_ENABLED'] || false %>
+        settings:
+          - key: :grants_offered
+            item:
+              - :self_service_osse_subsidy_2022
+              - :aca_individual_osse_aptc_minimum_2022
+      - key: :aca_ivl_osse_eligibility_2023
+        item: :aca_ivl_osse_eligibility_2023
+        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2023_IS_ENABLED'] || false %>
+        settings:
+          - key: :grants_offered
+            item:
+              - :self_service_osse_subsidy_2023
+              - :aca_individual_osse_aptc_minimum_2023
+      - key: :aca_ivl_osse_eligibility_2024
+        item: :aca_ivl_osse_eligibility_2024
+        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2024_IS_ENABLED'] || false %>
+        settings:
+          - key: :grants_offered
+            item:
+              - :self_service_osse_subsidy_2024
+              - :aca_individual_osse_aptc_minimum_2024
+  - namespace:
+    - :enroll_app
+    - :aca_individual_market
+    - :benefit_coverage_period
+    - :aca_ivl_osse_eligibility
+    - :aca_ivl_osse_eligibility_2022
+    features:
+      - key: :self_service_osse_subsidy_2022
+        item: :self_service_osse_subsidy
+        is_enabled: <%= ENV['SELF_SERVICE_OSSE_SUBSIDY_IS_ENABLED'] || false %>
+      - key: :aca_individual_osse_aptc_minimum_2022
         is_enabled: <%= ENV['ACA_INDIVIDUAL_OSSE_APTC_MINIMUM'] || false %>
         settings:
           - key: :minimum_applied_aptc_percentage_for_osse
             item: 0.85
-      - key: :aca_ivl_osse_subsidy_2021
-        item: :aca_ivl_osse_subsidy_2021
-        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2021_IS_ENABLED'] || false %>
-      - key: :aca_ivl_osse_subsidy_2022
-        item: :aca_ivl_osse_subsidy_2022
-        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2022_IS_ENABLED'] || false %>
-      - key: :aca_ivl_osse_subsidy_2023
-        item: :aca_ivl_osse_subsidy_2023
-        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2023_IS_ENABLED'] || false %>
-      - key: :aca_ivl_osse_subsidy_2024
-        item: :aca_ivl_osse_subsidy_2024
-        is_enabled: <%= ENV['IVL_OSSE_ELIGIBILITY_2024_IS_ENABLED'] || false %>
+  - namespace:
+    - :enroll_app
+    - :aca_individual_market
+    - :benefit_coverage_period
+    - :aca_ivl_osse_eligibility
+    - :aca_ivl_osse_eligibility_2023
+    features:
+      - key: :self_service_osse_subsidy_2023
+        item: :self_service_osse_subsidy
+        is_enabled: <%= ENV['SELF_SERVICE_OSSE_SUBSIDY_IS_ENABLED'] || false %>
+      - key: :aca_individual_osse_aptc_minimum_2023
+        is_enabled: <%= ENV['ACA_INDIVIDUAL_OSSE_APTC_MINIMUM'] || false %>
+        settings:
+          - key: :minimum_applied_aptc_percentage_for_osse
+            item: 0.85
+  - namespace:
+    - :enroll_app
+    - :aca_individual_market
+    - :benefit_coverage_period
+    - :aca_ivl_osse_eligibility
+    - :aca_ivl_osse_eligibility_2024
+    features:
+      - key: :self_service_osse_subsidy_2024
+        item: :self_service_osse_subsidy
+        is_enabled: <%= ENV['SELF_SERVICE_OSSE_SUBSIDY_IS_ENABLED'] || false %>
+      - key: :aca_individual_osse_aptc_minimum_2024
+        is_enabled: <%= ENV['ACA_INDIVIDUAL_OSSE_APTC_MINIMUM'] || false %>
+        settings:
+          - key: :minimum_applied_aptc_percentage_for_osse
+            item: 0.85
