--- a/config/client_config/dc/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/dc/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -118,7 +118,7 @@ registry:
       - key: :display_you_pay
         is_enabled: <%= ENV['DISPLAY_YOU_PAY_IS_ENABLED'] || false %>
       - key: :validate_ssn
-        is_enabled: <%= ENV['VALIDATE_SSN_IS_ENABLED'] || false %>
+        is_enabled: false
   - namespace:
     - :enroll_app
     - :aca_individual_market
