--- a/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -108,7 +108,7 @@ registry:
         is_enabled: true
       - key: :verification_reasons
         item: ["Document in EnrollApp", "Electronic data source", "State Medicaid Agency",
-               "CRM Document Management System"]
+                "CRM Document Management System", "Self-Attestation"]
         is_enabled: true
       - key: :total_minimum_responsibility
         is_enabled: true
